--- a/Projects/1 - Wiki/wiki/encyclopedia/templates/encyclopedia/search.html
+++ b/Projects/1 - Wiki/wiki/encyclopedia/templates/encyclopedia/search.html
@@ -1,11 +1,11 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Encyclopedia
+    Search result for {{ query|stringformat:'r' }}
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
+    <h1>Matching Pages for {{ query|stringformat:'r'}}</h1>
 
     <ul>
         {% for entry in entries %}
