--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
@@ -15,14 +15,14 @@
                     <div class="listing-title">{{ lt.title }}</div>
                     <div class="listing-price-container">
                         <span class="listing-price-prefix">Price: </span>
-                        <span class="listing-price">${{ lt.get_max_bid() }}</span>
+                        <span class="listing-price">${{ lt.get_max_bid }}</span>
                     </div>
                     {% if lt.description %}
                     <div class="listing-description">{{ lt.description }}</div>
                     {% endif %}
                     <div class="listing-time">
                         <span class="listing-time-prefix">Created </span>
-                        <span class="listing-time">${{ lt.creation_time.strftime("%c") }}</span>
+                        <span class="listing-time">{{ lt.get_time_str }}</span>
                     </div>
                 </div>
             </div>
