--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
@@ -1,28 +1,33 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
+
+{% block head %}
+    <link href="{% static 'auctions/index.css' %}" rel="stylesheet">
+{% endblock%}
 
 {% block body %}
     <h2>Active Listings</h2>
 
     <div>
         {% for lt in listings %}
-            <div>
+            <div class="row">
                 <div class="listing-left">
                     {% if lt.image_url %}
                         <img src="{{ lt.image_url }}" alt="{{ lt.title }}">
                     {% endif %}
                 </div>
                 <div class="listing-right">
-                    <div class="listing-title">{{ lt.title }}</div>
-                    <div class="listing-price-container">
-                        <span class="listing-price-prefix">Price: </span>
-                        <span class="listing-price">${{ lt.get_max_bid }}</span>
+                    <div class="listing-title"><a href="{% url 'listing' lt.id %}">{{ lt.title }}</a></div>
+                    <div class="listing-price">
+                        <span class="prefix">Price: </span>
+                        <span class="content">${{ lt.get_max_bid }}</span>
                     </div>
                     {% if lt.description %}
-                    <div class="listing-description">{{ lt.description }}</div>
+                        <div class="listing-description">{{ lt.description }}</div>
                     {% endif %}
                     <div class="listing-time">
-                        <span class="listing-time-prefix">Created </span>
-                        <span class="listing-time">{{ lt.get_time_str }}</span>
+                        <span class="prefix">Created </span>
+                        <span class="content">{{ lt.get_time_str }}</span>
                     </div>
                 </div>
             </div>
