--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}Auctions{% endblock %}</title>
+        <title>{% block title %}Auctions{% endblock title %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
         {% block head %}
-        {% endblock%}
+        {% endblock head %}
     </head>
     <body>
         <h1>Auctions</h1>
@@ -21,6 +21,9 @@
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'category' %}">Categories</a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item">
@@ -37,6 +40,6 @@
         </ul>
         <hr>
         {% block body %}
-        {% endblock %}
+        {% endblock body %}
     </body>
 </html>
