--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
@@ -11,24 +11,15 @@
     <div>
         {% for lt in listings %}
             <div class="row">
-                <div class="listing-left">
-                    {% if lt.image_url %}
-                        <img src="{{ lt.image_url }}" alt="{{ lt.title }}">
-                    {% endif %}
+                <div class="lt-left">
+                    {% include "auctions/snippets/lt/image.html" %}
                 </div>
-                <div class="listing-right">
-                    <div class="listing-title"><a href="{% url 'listing' lt.id %}">{{ lt.title }}</a></div>
-                    <div class="listing-price">
-                        <span class="prefix">Price: </span>
-                        <span class="content">${{ lt.get_max_bid }}</span>
-                    </div>
-                    {% if lt.description %}
-                        <div class="listing-description">{{ lt.description }}</div>
-                    {% endif %}
-                    <div class="listing-time">
-                        <span class="prefix">Created </span>
-                        <span class="content">{{ lt.get_time_str }}</span>
-                    </div>
+                <div class="lt-right">
+                    <div class="lt-title"><a href="{% url 'listing' lt.id %}">{{ lt.title }}</a></div>
+                    {% include "auctions/snippets/lt/categories.html" %}
+                    {% include "auctions/snippets/lt/price.html" with max_bid=lt.get_max_bid %}
+                    {% include "auctions/snippets/lt/description.html" %}
+                    {% include "auctions/snippets/lt/creation.html" %}
                 </div>
             </div>
         {% empty %}
