--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/categories.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/categories.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block head %}
-    <link href="{% static 'auctions/categories.css' %}" rel="stylesheet">
+    <link href="{% static 'auctions/css/categories.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block body %}
