--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link href="{% static 'auctions/index.css' %}" rel="stylesheet">
+    <link href="{% static 'auctions/css/index.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block body %}
