--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
@@ -5,13 +5,13 @@
     <head>
         <title>{% block title %}Auctions{% endblock title %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'auctions/css/styles.css' %}" rel="stylesheet">
         {% block head %}
         {% endblock head %}
     </head>
     <body>
         <h1>Auctions</h1>
-        <div>
+        <div class="login">
             {% if user.is_authenticated %}
                 Signed in as <strong>{{ user.username }}</strong>.
             {% else %}
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'category' %}">Categories</a>
+                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item">
