--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment/comment-disabled.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment/comment-disabled.html
@@ -1,4 +1,8 @@
 <form class="lt-form-comment">
-    {{ lf.comment_disabled_form }}
+    <table class="lt-form-comment-table">
+        <tbody>
+            {{ lf.comment_disabled_form.as_table }}
+        </tbody>
+    </table>
     <input type="submit" value="Comment" disabled>
 </form>
