--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
@@ -7,7 +7,7 @@
 
 {% block head %}
     <link href="{% static 'auctions/css/listing.css' %}" rel="stylesheet">
-    <script src="{% static '' %}"></script>
+    <script src="{% static 'auctions/js/listing.js' %}"></script>
 {% endblock head %}
 
 {% block body %}
@@ -21,6 +21,9 @@
             {% include "auctions/snippets/lt/creation.html" %}
             {% include "auctions/snippets/lt/price.html" with currency=lb.currency max_bid=lb.max_bid %}
             {% include "auctions/snippets/lt/bid/current.html" %}
+            {% if bid_err %}
+                <div class="lt-bid-err">{{ bid_err }}</div>
+            {% endif %}
             {% if lt.active %}
                 {% if is_owner %}
                     {% include "auctions/snippets/lt/bid/close.html" %}
