--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
@@ -1,49 +1,35 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/base-lt.html" %}
 {% load static %}
 
-{% block title %}
-    {{ lt.title }}
-{% endblock title %}
-
 {% block head %}
+    {{ block.super }}
     <link href="{% static 'auctions/css/listing.css' %}" rel="stylesheet">
     <script src="{% static 'auctions/js/listing.js' %}"></script>
 {% endblock head %}
 
-{% block body %}
-    {% if lt %}
-        <div>
-            <h2>Listing: {{ lt.title }}</h2>
-            {% include "auctions/snippets/lt/watch.html" %}
-            {% include "auctions/snippets/lt/image.html" %}
-            {% include "auctions/snippets/lt/description.html" %}
-            {% include "auctions/snippets/lt/categories.html" %}
-            {% include "auctions/snippets/lt/creation.html" %}
-            {% include "auctions/snippets/lt/price.html" with currency=lb.currency max_bid=lb.max_bid %}
-            {% include "auctions/snippets/lt/bid/current.html" %}
-            {% if bid_err %}
-                <div class="lt-bid-err">{{ bid_err }}</div>
-            {% endif %}
-            {% if lt.active %}
-                {% if is_owner %}
-                    {% include "auctions/snippets/lt/bid/close.html" %}
-                {% elif user.is_authenticated %}
-                    {% include "auctions/snippets/lt/bid/bid.html" %}
-                {% else %}
-                    {% include "auctions/snippets/lt/bid/bid-disabled.html" %}
-                {% endif %}
-            {% else %}
-                <div class="lt-sold">This item is sold.</div>
-            {% endif %}
-            <h3>Comments</h3>
-            {% if user.is_authenticated %}
-                {% include "auctions/snippets/lt/comment/comment.html" %}
-            {% else %}
-                {% include "auctions/snippets/lt/comment/comment-disabled.html" %}
-            {% endif %}
-            {% include "auctions/snippets/lt/comment/entries.html" %}
-        </div>
-    {% else %}
-        <h2>Requested listing does not exist!</h2>
+{% block actions %}
+    {% include "auctions/snippets/lt/creation.html" %}
+    {% include "auctions/snippets/lt/price.html" with currency=lb.currency max_bid=lb.max_bid %}
+    {% include "auctions/snippets/lt/bid/current.html" %}
+    {% if bid_err %}
+        <div class="lt-bid-err">{{ bid_err }}</div>
     {% endif %}
-{% endblock body %}
+    {% if lt.active %}
+        {% if is_owner %}
+            {% include "auctions/snippets/lt/bid/close.html" %}
+        {% elif user.is_authenticated %}
+            {% include "auctions/snippets/lt/bid/bid.html" %}
+        {% else %}
+            {% include "auctions/snippets/lt/bid/bid-disabled.html" %}
+        {% endif %}
+    {% else %}
+        <div class="lt-sold">This item is sold.</div>
+    {% endif %}
+    <h3>Comments</h3>
+    {% if user.is_authenticated %}
+        <div class="lt-comment-link">
+            <a href="{% url 'comment-new' lt.id %}">Add a comment</a>
+        </div>
+    {% endif %}
+    {% include "auctions/snippets/lt/comment-block/entries.html" %}
+{% endblock actions %}
