--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/comment-disabled.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/comment-disabled.html
@@ -1,8 +1,8 @@
 <form class="lt-form-comment">
     <table class="lt-form-comment-table">
         <tbody>
-            {{ lf.comment_disabled_form.as_table }}
+            {{ cf.comment_disabled_form.as_table }}
         </tbody>
     </table>
-    <input type="submit" value="Comment" disabled>
+    <input type="submit" value="Save" disabled>
 </form>
