--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/listing.html
@@ -4,7 +4,7 @@
 {% block head %}
     {{ block.super }}
     <link href="{% static 'auctions/css/listing.css' %}" rel="stylesheet">
-    <script src="{% static 'auctions/js/listing.js' %}"></script>
+    <script src="{% static 'auctions/js/currency.js' %}"></script>
 {% endblock head %}
 
 {% block actions %}
