--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/bid/current.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/bid/current.html
@@ -1,5 +1,5 @@
 <div class="lt-bids">
-    <span class="num">{{ lb.num_bids }} so far.</span>
+    <span class="num">{{ lb.num_bids }} bid{{ lb.num_bids|pluralize }} so far.</span>
     {% if lb.is_max_bid %}
         <span class="is-current"> Your bid is the current bid.</span>
     {% endif %}
