--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/comment.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/comment.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
     <table class="lt-form-comment-table">
         <tbody>
-            {{ cf.comment_form.as_table }}
+            {{ comment_form.as_table }}
         </tbody>
     </table>
     <input type="submit" value="Save">
