--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/comment.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/comment.html
@@ -13,6 +13,6 @@
     {% if user.is_authenticated %}
         {% include "auctions/snippets/lt/comment-block/comment.html" %}
     {% else %}
-        {% include "auctions/snippets/lt/comment-block/comment-disabled.html" %}
+        <div class="auth-required">Log in to add a comment!</div>
     {% endif %}
 {% endblock actions %}
