--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/entries.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/comment-block/entries.html
@@ -2,7 +2,7 @@
     <div>
         {% if lc.num_of_comments %}
             {% if lc.user_comment %}
-                <div class="lt-comment">
+                <div class="lt-comment personal">
                     <div class="summary">
                         <span class="user">You</span>
                         <span> commented: </span>
