--- a/Projects/2 - Commerce/commerce/auctions/static/auctions/css/styles.css
+++ b/Projects/2 - Commerce/commerce/auctions/static/auctions/css/styles.css
@@ -1,3 +1,44 @@
 body {
     padding: 10px;
 }
+
+img {
+    max-width: 100%;
+}
+
+form input[type="submit"] {
+    color: white;
+    border: none;
+    border-radius: 6px;
+    background-color: darkcyan;
+}
+
+table th {
+    text-align: right;
+}
+
+.cust-row {
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    margin-bottom: 6px;
+}
+
+.lt-categories .content {
+    display: inline-block;
+    padding: 0 6px;
+    border-radius: 6px;
+    background-color: grey;
+}
+
+.lt-categories .content a {
+    color: white;
+    text-decoration: none;
+}
+
+.lt-price .content {
+    font-weight: bold;
+}
+
+.lt-description {
+    padding: 6px 0;
+}
