--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/bid/close.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/bid/close.html
@@ -1,5 +1,5 @@
 <form action="{% url 'close' %}" method="POST" class="lt-form-close">
     {% csrf_token %}
     {{ lf.close_form }}
-    <input type="submit" value="Mark sold" {% if lb.no_bids %}disabled{% endif %}>
+    <button type="submit" class="btn btn-primary" {% if lb.no_bids %}disabled{% endif %}>Mark sold</button>
 </form>
