--- a/Projects/2 - Commerce/commerce/auctions/static/auctions/css/styles.css
+++ b/Projects/2 - Commerce/commerce/auctions/static/auctions/css/styles.css
@@ -13,8 +13,28 @@ form input[type="submit"] {
     background-color: darkcyan;
 }
 
-table th {
+a.nav-link {
+    display: inline-block;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.form-label {
+    padding: 0 6px;
     text-align: right;
+    width: 16%;
+}
+
+.form-input {
+    width: 83%;
+}
+
+.btn a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .cust-row {
@@ -23,11 +43,17 @@ table th {
     margin-bottom: 6px;
 }
 
+.wishlist-len,
 .lt-categories .content {
+    color: white;
     display: inline-block;
     padding: 0 6px;
     border-radius: 6px;
     background-color: grey;
+}
+
+.lt-categories .content.inactive {
+    background-color: darkred;
 }
 
 .lt-categories .content a {
@@ -36,6 +62,7 @@ table th {
 }
 
 .lt-price .content {
+    font-size: 24px;
     font-weight: bold;
 }
 
