--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/layout.html
@@ -10,39 +10,49 @@
         {% endblock head %}
     </head>
     <body>
-        <h1>Auctions</h1>
-        <div class="login">
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-        </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'new' %}">Create New Listing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
-            </li>
-            {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand">
+            <h1 class="navbar-brand">Auctions</h1>
+            <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                    <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    <a class="nav-link" href="{% url 'categories' %}">Categories</a>
                 </li>
-            {% endif %}
-        </ul>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'watchlist' %}">
+                            Watchlist
+                            <span class="wishlist-len">{{ wishlist_len }}</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'new' %}">Create Listing</a>
+                    </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">
+                            Log Out
+                            <span class="login">
+                                <strong>{{ user.username }}</strong>
+                            </span>
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
         <hr>
-        {% block body %}
-        {% endblock body %}
+        <main class="container">
+            {% block body %}
+            {% endblock body %}
+        </main>
     </body>
 </html>
