--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/new.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/new.html
@@ -15,13 +15,26 @@
     {% if user.is_authenticated %}
         <form action="{% url 'new' %}" method="POST">
             {% csrf_token %}
-            <table class="new-table">
-                <tbody>
-                    {{ form.media }}
-                    {{ form.as_table }}
-                </tbody>
-            </table>
-            <input type="submit" value="Save">
+            {{ form.media }}
+            {% for field in form.hidden_fields %}
+                {{ field }}
+            {% endfor %}
+            {% for field in form.visible_fields %}
+                <div class="form-group row">
+                    <div class="form-label">
+                        {{ field.label_tag }}
+                    </div>
+                    <div class="form-input">
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+            <div class="row">
+                <div class="form-label"></div>
+                <div class="form-input">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </div>
         </form>
         <script type="application/javascript" src="{% static 'auctions/js/currency.js' %}"></script>
         <script type="application/javascript" src="{% url 'jsi18n' %}"></script>
