--- a/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/categories.html
+++ b/Projects/2 - Commerce/commerce/auctions/templates/auctions/snippets/lt/categories.html
@@ -1,7 +1,11 @@
 <div class="lt-categories">
-    {% for cat in lt.categories.all|dictsort:'name' %}
-        <span class="content">
-            <a href="{% url 'category' cat %}">{{ cat }}</a>
-        </span>
-    {% endfor %}
+    {% if lt.active %}
+        {% for cat in lt.categories.all|dictsort:'name' %}
+            <span class="content">
+                <a href="{% url 'category' cat %}">{{ cat }}</a>
+            </span>
+        {% endfor %}
+    {% else %}
+        <span class="content inactive">Inactive</span>
+    {% endif %}
 </div>
