--- a/Projects/2 - Commerce/commerce/auctions/static/auctions/css/listing.css
+++ b/Projects/2 - Commerce/commerce/auctions/static/auctions/css/listing.css
@@ -23,6 +23,10 @@
     font-style: italic;
 }
 
+.lt-sold.is-current {
+    color: darkred;
+}
+
 .lt-comment {
     padding: 12px 18px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.1);
