--- a/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
+++ b/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
@@ -33,5 +33,8 @@
 {% endblock %}
 
 {% block script %}
-    <script src="{% static 'mail/js/inbox.js' %}"></script>
+    <script src="{% static 'mail/js/init.js' %}"></script>
+    <script src="{% static 'mail/js/csrf.js' %}"></script>
+    <script src="{% static 'mail/js/views.js' %}"></script>
+    <script src="{% static 'mail/js/api-actions.js' %}"></script>
 {% endblock %}
