--- a/Projects/3 - Mail/mail/mail/static/mail/css/styles.css
+++ b/Projects/3 - Mail/mail/mail/static/mail/css/styles.css
@@ -2,7 +2,68 @@ textarea {
     min-height: 400px;
 }
 
-#error-view {
-    display: none;
-    color: darkred;
+.email-preview {
+    display: block;
+    border-top: 1px solid rgba(170, 135, 135, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    padding: 8px 24px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.email-preview>* {
+    padding: 0 6px;
+    background: linear-gradient(to right,#000 95%, #fff 100%);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+/* .email-preview>*::before {
+    content:'';
+    width:100%;
+    height:100%;
+    position:absolute;
+    left:0;
+    top:0;
+    background: linear-gradient(to right, transparent 80%, #fff);
+} */
+
+.email-content {
+    display: block;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
+    padding: 24px;
+}
+
+.email-sender {
+    display: inline-block;
+}
+
+.email-recipients {
+    display: inline-block;
+}
+
+.email-title {
+    font-weight: bold;
+}
+
+.email-preview .email-other {
+    display: inline-block;
+    width: 20%;
+}
+
+.email-preview .email-title {
+    display: inline-block;
+    width: 25%;
+}
+
+.email-preview .email-body {
+    display: inline-block;
+    width: 55%;
+}
+
+.email-content .email-body {
+    display: block;
 }
