--- a/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
+++ b/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
@@ -18,7 +18,7 @@
     <h3>New Email</h3>
     <form id="compose-form" autocomplete="off">
         <div class="form-group">
-            From: <input type="email" value="{{ request.user.email }}" class="form-control" disabled>
+            From: <input type="email" id="compose-sender" value="{{ request.user.email }}" class="form-control" disabled>
         </div>
         <div class="form-group">
             To: <input type="email" id="compose-recipients" name="recipients" class="form-control" list="existing-users"
@@ -40,9 +40,13 @@
 {% endblock %}
 
 {% block script %}
+<link rel="stylesheet" href="{% static 'mail/css/email-preview.css' %}">
+<link rel="stylesheet" href="{% static 'mail/css/email-details.css' %}">
 <script src="{% static 'mail/js/init.js' %}"></script>
 <script src="{% static 'mail/js/util.js' %}"></script>
 <script src="{% static 'mail/js/csrf.js' %}"></script>
+<script src="{% static 'mail/js/api.js' %}"></script>
+<script src="{% static 'mail/js/elements.js' %}"></script>
 <script src="{% static 'mail/js/views.js' %}"></script>
 <script src="{% static 'mail/js/actions.js' %}"></script>
 {% endblock %}
