--- a/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
+++ b/Projects/3 - Mail/mail/mail/templates/mail/inbox.html
@@ -45,6 +45,7 @@
 <script src="{% static 'mail/js/init.js' %}"></script>
 <script src="{% static 'mail/js/util.js' %}"></script>
 <script src="{% static 'mail/js/csrf.js' %}"></script>
+<script src="{% static 'mail/js/icons.js' %}"></script>
 <script src="{% static 'mail/js/api.js' %}"></script>
 <script src="{% static 'mail/js/elements.js' %}"></script>
 <script src="{% static 'mail/js/views.js' %}"></script>
