--- a/Projects/4 - Network/network/network/templates/network/register.html
+++ b/Projects/4 - Network/network/network/templates/network/register.html
@@ -1,5 +1,9 @@
 {% extends "network/layout.html" %}
 
+{% block title %}
+    Register
+{% endblock title %}
+
 {% block body %}
 
     <h2>Register</h2>
