--- a/Projects/4 - Network/network/network/templates/network/login.html
+++ b/Projects/4 - Network/network/network/templates/network/login.html
@@ -1,5 +1,9 @@
 {% extends "network/layout.html" %}
 
+{% block title %}
+    Login
+{% endblock title %}
+
 {% block body %}
 
     <h2>Login</h2>
@@ -21,4 +25,4 @@
 
     Don't have an account? <a href="{% url 'register' %}{% if next_ %}?next={{ next_ }}{% endif %}">Register here.</a>
 
-{% endblock %}
+{% endblock body %}
