--- a/Projects/4 - Network/network/network/templates/network/index.html
+++ b/Projects/4 - Network/network/network/templates/network/index.html
@@ -1,5 +1,5 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+    {% include "network/includes/posts/post-container.html" %}
 {% endblock body %}
