--- a/Projects/4 - Network/network/network/templates/network/includes/posts/post-container.html
+++ b/Projects/4 - Network/network/network/templates/network/includes/posts/post-container.html
@@ -1,5 +1,1 @@
-<div class="post-container">
-    {% for post in posts %}
-        {% include "network/includes/posts/post.html" %}
-    {% endfor %}
-</div>
+<div class="post-container" id="post-container"></div>
