--- a/Projects/4 - Network/network/network/templates/network/index.html
+++ b/Projects/4 - Network/network/network/templates/network/index.html
@@ -1,5 +1,10 @@
 {% extends "network/layout.html" %}
+{% load static %}
 
 {% block body %}
     {% include "network/includes/posts/post-container.html" %}
 {% endblock body %}
+
+{% block scripts %}
+    <script src="{% static 'network/js/post.js' %}"></script>
+{% endblock scripts %}
