--- a/Projects/4 - Network/network/network/templates/network/layout.html
+++ b/Projects/4 - Network/network/network/templates/network/layout.html
@@ -5,7 +5,7 @@
     <head>
         <title>{% block title %}Social Network{% endblock title %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'network/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'network/css/styles.css' %}" rel="stylesheet">
     </head>
     <body>
 
@@ -39,11 +39,13 @@
                 {% endif %}
               </ul>
             </div>
-          </nav>
-        
+        </nav>
         <main class="body container">
             {% block body %}
             {% endblock body %}
         </main>
+        <script src="{% static 'network/js/util.js' %}"></script>
+        {% block scripts %}
+        {% endblock scripts %}
     </body>
 </html>
