--- a/Projects/4 - Network/network/network/templates/network/layout.html
+++ b/Projects/4 - Network/network/network/templates/network/layout.html
@@ -45,6 +45,7 @@
             {% endblock body %}
         </main>
         <script src="{% static 'network/js/util.js' %}"></script>
+        <script src="{% static 'network/js/csrf.js' %}"></script>
         {% block scripts %}
         {% endblock scripts %}
     </body>
