--- a/Projects/4 - Network/network/network/templates/network/index.html
+++ b/Projects/4 - Network/network/network/templates/network/index.html
@@ -3,6 +3,7 @@
 
 {% block head %}
     <link href="{% static 'network/css/posts.css' %}" rel="stylesheet">
+    <link href="{% static 'network/css/index.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block body %}
