--- a/Projects/4 - Network/network/network/templates/network/profile.html
+++ b/Projects/4 - Network/network/network/templates/network/profile.html
@@ -5,6 +5,7 @@
 
 {% block head %}
     <link href="{% static 'network/css/posts.css' %}" rel="stylesheet">
+    <link href="{% static 'network/css/profile.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block title %}
