--- a/Projects/4 - Network/network/network/static/network/css/posts.css
+++ b/Projects/4 - Network/network/network/static/network/css/posts.css
@@ -7,6 +7,11 @@
     font-weight: bold;
 }
 
+.post-username a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .post-content {
     border: 0.5px solid lightgray;
     border-radius: 1rem;
