--- a/Projects/4 - Network/network/network/static/network/css/styles.css
+++ b/Projects/4 - Network/network/network/static/network/css/styles.css
@@ -2,6 +2,14 @@
     cursor: pointer;
 }
 
+.button-visible {
+    display: block;
+}
+
+.button-hidden {
+    display: none;
+}
+
 .empty-list {
     text-align: center;
 }
