--- a/Projects/4 - Network/network/network/templates/network/profile.html
+++ b/Projects/4 - Network/network/network/templates/network/profile.html
@@ -24,8 +24,8 @@
             <h2 class="username" data-username="{{ user_.username }}" id="username">{{ user_.username }}</h2>
             {% if user != user_ %}
                 <div class="follow-button">
-                    <div class="followed-button{% followed_class user user_ False%}">Unfollow</div>
-                    <div class="unfollowed-button{% followed_class user user_ False%}">Follow</div>
+                    <div class="followed-button div-button {% followed_class user user_ False %}" id="followed-button">Unfollow</div>
+                    <div class="unfollowed-button div-button {% followed_class user user_ True %}" id="unfollowed-button">Follow</div>
                 </div>
             {% endif %}
             <div class="num-followers">Followed by {{ num_followers }} {{ num_followers|pluralize:"person,people" }}</div>
